# __2025_11_01_tvdi_python_crawel__

./: .gitignore  README.md  output.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: learning2.instructions.md
learning1/: learning1_1.ipynb  learning1_2.py  learning1_3.py  lesson1_4.ipynb  lesson1_5.ipynb  lesson1_6.ipynb  lesson1_7.ipynb
learning2/: README.md  crawler_module.py  gui_app.py  learning2_1.ipynb  main.py  requirements.txt
learning2/data/: 台幣匯率_20251212_140632.json  台幣匯率_20251212_140835.json  台幣匯率_20251212_143218.json  台幣匯率_20251212_143814.json
lesson2/: lesson2_2.ipynb  lesson2_3.ipynb  lesson2_4.ipynb
lesson3/: lesson3_2.ipynb  lesson3_5.ipynb
lesson4/: lesson4_1.ipynb  lesson4_3.py
lesson5/: lesson5_1.py  lesson5_2.py
lesson6/: lesson6_1.ipynb  lesson6_2.ipynb  lesson6_2.py  lesson6_3.py
lesson7/: lesson7_1.ipynb  lesson7_1.py  lesson7_3.py  lesson7_4.py  lesson7_5.py
lesson8/: main.py  plan.md
lesson8_1/: lesson8_1_3.py  main.py  plan.md
link/: README.md
