[project]
name = "crawl"
version = "0.1.0"
description = "職能發展學院_網路爬蟲"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.7",
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "playwright>=1.56.0",
]
[tool.pyrefly]
project-includes = ["."]
project-excludes = ["**/__pycache__", ".venv", "build", "dist"]
python_version = "3.10"